2003-04-19 M Pollard <circlemaster@blueyonder.co.uk>
	* ServerService.cpp, OOGChat.cpp, MetaserverService.cpp:
	    Update obsolete <strstream> to <sstream>.

2003-04-13 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* Configure.ac: created check for wfmath. Moved to PKG_CONFIG checking
	the checks for some libraries.
	* INSTALL: added a quick hack for installing boot under "troubleshooting".
	* src files: fixed some constant string declarations on headers.
2003-01-06 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* OgreApp.cpp/h: dual mode for the GUI: press 'H' to display 
	the GUI and use the mouse to click on it.
	Press 'H' again to hide it and return to fullscreen mouseview.

2003-01-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* OgreApp.cpp/h: added basic GUI elements.
	Now OgreApp inherits from ogre::ActionListener
	and ogre::MouseListener

2002-12-16 M Pollard <circlemaster@blueyonder.co.uk>
	* EventGenerator.cpp/h: Forgot to null out myFocusedWidget oops!

2002-12-16 M Pollard <circlemaster@blueyonder.co.uk>
	* Converted SigC::Object to virtual SigC::Object.

2002-12-15 M Pollard <circlemaster@blueyonder.co.uk>
	* ImageService.cpp/h: Quick tidy up.

2002-12-13 M Pollard <circlemaster@blueyonder.co.uk>
	* EntityListener.cpp/h: Rename of gameview creation of new pure virtual
	  base class.  Reviews welcome!

	* TemplateEntityListener.cpp/h templategameview.cpp/h: rename and
	  modify of GameView template.

2002-12-10 M Pollard <circlemaster@blueyonder.co.uk>
	* templategameview.cpp/h: Updated this.

	* DimeServices.cpp/h ConfigService.cpp/h: standardised the instancing
	  mechanism.

	* LoggingService.cpp/h ConfigService.cpp/h: made sure Service() was
	  instanced.

2002-12-10 Miguel Guzman (Aglanor) <aglanor@telefonica.net>

	* terrain.cfg, moraf.png: added moraf map, quick & dirty version.
	Now you can wander in 3d over the lands of Moraf.


2002-12-10 Miguel Guzman (Aglanor) <aglanor@telefonica.net>
